--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,14 +1,14 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
 target 'baseapp-ios-core-v1_Example' do
-  platform :ios, '16.0'
+  platform :ios, '16.2'
   use_frameworks!
   inhibit_all_warnings!
   
   pod 'baseapp-ios-core-v1', :path => '../'
   pod 'baseapp-ios-core-v1/ARKit', :path => '../'
   pod 'baseapp-ios-core-v1/FilePreviewer', :path => '../'
-  pod 'SwiftLint'
+  pod 'SwiftLint', '~> 0.62.2'
 
   target 'baseapp-ios-core-v1_Tests' do
     inherit! :search_paths
@@ -17,7 +17,7 @@ target 'baseapp-ios-core-v1_Example' do
 end
 
 target 'Example' do
-  platform :watchos, '6.0'
+  platform :watchos, '10.4'
   use_frameworks!
   inhibit_all_warnings!
 
@@ -25,7 +25,7 @@ target 'Example' do
 end
 
 target 'Example Extension' do
-  platform :watchos, '6.0'
+  platform :watchos, '10.4'
   use_frameworks!
   inhibit_all_warnings!
 
@@ -36,7 +36,7 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
-      config.build_settings['WATCHOS_DEPLOYMENT_TARGET'] = '6.0'
+      config.build_settings['WATCHOS_DEPLOYMENT_TARGET'] = '6.2'
     end
   end
 end
