--- a/Example/Podfile
+++ b/Example/Podfile
@@ -24,17 +24,16 @@ target 'Example' do
   pod 'baseapp-ios-core-v1', :path => '../'
 end
 
-target 'Example Extension' do
-  platform :watchos, '10.4'
-  use_frameworks!
-  inhibit_all_warnings!
-
-  pod 'baseapp-ios-core-v1', :path => '../'
-end
-
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
+      config.build_settings['GCC_WARN_ABOUT_DEPRECATED_FUNCTIONS'] = 'NO'
+      config.build_settings['ONLY_ACTIVE_ARCH'] = 'YES'
+      config.build_settings['ENABLE_STRICT_OBJC_MSGSEND'] = "NO"
+      config.build_settings['CLANG_ENABLE_CODE_COVERAGE'] = "NO"
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = "16.0"
+      config.build_settings["ENABLE_USER_SCRIPT_SANDBOXING"] = "NO"
+      config.build_settings["CLANG_WARN_QUOTED_INCLUDE_IN_FRAMEWORK_HEADER"] = "NO"
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
       config.build_settings['WATCHOS_DEPLOYMENT_TARGET'] = '6.2'
     end
